@@ -1,3 +1,4 @@
+Sim Sharing: Under the "Advanced" controls: Wire resistivity - Instrument as done for the other sliders, i.e. need start drag, drag (time limited), and end drag.
 Sim Sharing: Send messages when switches are opened or closed
 Sim Sharing: Voltmeter - value thresholding so that sim sharing messages are only sent when the readout seen by the user changes
 Sim Sharing: Time limit current messages from ammeters
